--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,33 @@
-<h1>Lmaoski</h1>
-<a routerLink="/">Home</a>
-<a routerLink="about">About</a>
-<router-outlet />
+<nav class="navbar navbar-expand-lg bg-body-tertiary mb-3">
+  <div class="container">
+    <a class="navbar-brand" routerLink="/">
+      <i class="fa-solid fa-plane-up"></i> PKI2025
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/">
+            <i class="fa-solid fa-house"></i> Home
+          </a>
+        </li>
+        <li>
+            <a class="nav-link" routerLink="/question">
+                <i class="fa-solid fa-clipboard-question"></i> Questions
+            </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/about">
+            <i class="fa-solid fa-circle-info"></i> About
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<div class="container">
+  <router-outlet />
+</div>
